fix for date - grid spacing on mobile

--- a/src/style/modules/_openinfralive.scss
+++ b/src/style/modules/_openinfralive.scss
@@ -162,7 +162,7 @@
   gap: 0px 15px;
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
-    grid-template-rows: 0.2fr 0.6fr 1fr;
+    grid-template-rows: 30px 0.6fr 1fr;
     grid-template-areas:
       "date"
       "video"
